fix nav and body overlap

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,8 @@
 
 body {
   margin: 0;
+  /* Padding is to compensate for mobile bottom nav */
+  padding-bottom: 55.2px; 
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -50,14 +52,14 @@ nav section {
   color: white;
 }
 
-nav a,
+/* nav a,
 nav a:active {
   font-weight: 700;
   padding: 0.25rem 1.5rem;
   border-radius: 4px;
   color: white !important;
   background: #481499;
-}
+} */
 
 nav a:first-of-type {
   margin-left: -1.5rem;
